# k8s-local

./: .dockerignore  .flake8  .gitignore  Dockerfile  pyproject.toml  requirements.txt  skaffold.yaml
.devcontainer/: devcontainer.json
deployment/: README.md  certificates.yaml  kustomization.yaml  test-flask-application.yaml  test-flask.yaml  tls-store.yaml
deployment/cert-manager/: default-tls-store.yaml
deployment/data/: 1_namespaces.yaml  elasticsearch.yaml  kafka.yaml  kustomization.yaml  mysql.yaml  rabbitmq.yaml  redis-insight.yaml  redis.yaml
deployment/data/kafka/: kafdrop.yaml  kafka.yaml  kustomization.yaml  redpanda.yaml
deployment/services/: kustomization.yaml  test-django.yaml  test-flask-external-api.yaml  test-flask.yaml
deployment/system/: acme-issuer.yaml  namespaces.yaml  sealed-secrets-helm-chart.yaml  traefik-dashboard-ingress-route.yaml  traefik-helm-chart-config.yaml  traefik-middleware.yaml  traefik-tls-option.yaml
hello_app/: __init__.py  views.py
hello_app/templates/: hello_there.html  home.html
hello_asp/: Dockerfile  appsettings.Development.json
hello_asp/Pages/: Error.cshtml.cs  Index.cshtml.cs  Privacy.cshtml.cs  _ViewImports.cshtml
hello_asp/Properties/: launchSettings.json
hello_django/: Dockerfile  pyproject.toml
hello_django/hello/: urls.py  views.py
hello_django/hello/migrations/: 0001_initial.py
hello_django/hello/templates/hello/: home.html
hello_django/web_project/: settings.py  urls.py
hello_flask/: pyproject.toml
hello_nextjs/: Dockerfile  package-lock.json  package.json
hello_nextjs/app/: page.tsx
manifests/: README.md
manifests/data/: rabbitmq.yaml
manifests/services/: hello-asp.yaml  hello-django.yaml  hello-flask-external-api.yaml  hello-flask.yaml  hello-nextjs.yaml  kustomization.yaml  namespace.yaml  test-asp.yaml
manifests/system/: portainer.yaml
(+31 files in other folders)
