[tool.poetry]
name = "test-flask"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "test_flask"}]

[tool.poetry.dependencies]
python = "^3.11"
Flask = "2.2.3"
babel = "2.12.1"
click = "8.1.3"
colorama = "0.4.6"
flask-babel = "3.1.0"
gunicorn = "20.1.0"
itsdangerous = "2.1.2"
jinja2 = "3.1.2"
markupsafe = "2.1.2"
pytz = "2023.3"
werkzeug = "2.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
