[tool.poetry]
name = "hello-django"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "hello_django"}]

[tool.poetry.dependencies]
python = "^3.11"
Django = "^4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
