[tool.poetry]
name = "hello-django"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
# packages = [{include = "hello_django"}]

[tool.poetry.dependencies]
python = "^3.11"
Django = "^4.2"
django-extensions = "^3.2.1"
pyopenssl = "^23.1.1"
mysqlclient = "^2.1.1"
gunicorn = "^20.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
