[tool.poetry]
name = "hello-django"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
packages = [{include = "hello"}]

[tool.poetry.dependencies]
python = "^3.11"
Django = "^4.2"
django-extensions = "^3.2.1"
pyopenssl = "^23.1.1"
mysqlclient = "^2.1.1"
gunicorn = "^20.1.0"
werkzeug = "^2.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
